--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
         <div class="banner">
             <section class="section-banner">
+                <h1>Café Aroma</h1>
+                <p>Descubre el placer de un buen café</p>
+
             </section>
+            <!-- fin section banner -->
         </div>
 
     </header>
