--- a/tienda.html
+++ b/tienda.html
@@ -36,35 +36,39 @@
         <section id="products">
             <h2>Productos</h2>
 
-            <div class="product">
-                <img src="/img/1.jpg" alt="Producto 1">
-                <h3>Nike air force 1</h3>
-                <p>El fulgor sigue vivo en las Nike Air Force 1 '07, un modelo original de baloncesto que introduce un
-                    nuevo giro a sus ya característicos revestimientos con costuras duraderas, sus acabados impecables y
-                    la cantidad perfecta de reflectante.</p>
-                <p>Precio: $100</p>
-                <button>Añadir al carrito</button>
+            <!-- From Uiverse.io by G4b413l -->
+            <div class="card">
+                <div class="image">
+                    <img src="/img/blazer.png" alt="Cool Chair">
+                </div>
+                <span class="title">Cool Chair</span>
+                <span class="price">$100</span>
             </div>
 
-            <div class="product">
-                <img src="/img/2.jpg" alt="Producto 2">
-                <h3>Nike runnig</h3>
-                <p>Despliega tus alas y observa lo que ofrece la naturaleza mientras recorres los senderos con las Peg
-                    Trail 5. Ahora equipadas con una mediasuela de espuma ReactX ultrarreactiva, estas zapatillas son
-                    una auténtica máquina dispuesta a cruzar la línea divisoria entre la tierra y el asfalto.</p>
-                <p>Precio: $80</p>
-                <button>Añadir al carrito</button>
+            <div class="card">
+                <div class="image">
+                    <img src="/img/blazer.png" alt="Cool Chair">
+                </div>
+                <span class="title">Cool Chair</span>
+                <span class="price">$100</span>
             </div>
 
-            <div class="product">
-                <img src="/img/3.jpg" alt="Producto 3">
-                <h3>Nike Air Force 1</h3>
-                <p>El fulgor sigue vivo en las Nike Air Force 1 '07, un modelo original de baloncesto que introduce un
-                nuevo giro a sus ya característicos revestimientos con costuras duraderas, sus acabados impecables y
-                la cantidad perfecta de reflectante.</p>
-                <p>Precio: $150</p>
-                <button>Añadir al carrito</button>
+            <div class="card">
+                <div class="image">
+                    <img src="/img/blazer.png" alt="Cool Chair">
+                </div>
+                <span class="title">Cool Chair</span>
+                <span class="price">$100</span>
             </div>
+
+            <div class="card">
+                <div class="image">
+                    <img src="/img/blazer.png" alt="Cool Chair">
+                </div>
+                <span class="title">Cool Chair</span>
+                <span class="price">$100</span>
+            </div>
+
         </section>
 
 
